--- a/EM/index.html
+++ b/EM/index.html
@@ -525,7 +525,7 @@
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Premium Plan</h3>
-              <p class="description">The Premium Plan provides advanced features, enhanced customization, and priority support for a more comprehensive financial management experience</p>
+              <p class="description">The Premium Plan provides advanced features, enhanced customization, and priority support </p>
               <h4><sup>₹</sup>499<span> / month</span></h4>
               <a href="#" class="cta-btn">Start a free trial</a>
               <p class="text-center small">No credit card required</p>
